fix alignment of results datetime picker

--- a/web_app/journeyplanner/static/journeyplanner/main.css
+++ b/web_app/journeyplanner/static/journeyplanner/main.css
@@ -202,6 +202,7 @@ html, body {
     margin-left: 130px;
     height: 40px;
     margin-bottom: 7px;
+    margin-top: 7px;
   }
 
 
@@ -338,6 +339,9 @@ ul {
         display: block;
       }
 
+      .results-dt-mob {
+        padding-left: 0px;
+      }
      
     /* show map interface again when screen is stretched out */
     @media only screen and (min-width: 992px) {
